tests/eval/exp/bad/builtin-divzero4.scilla
let f =
  fun (a : Int256) =>
  fun (b : Int256) =>
    builtin div a b
in
let int_min = Int256 -57896044618658097711785492504343953926634992332820282019728792003956564819968 in
let minus_one = Int256 -1 in
f int_min minus_one
